<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>nacos</artifactId>
        <groupId>org.example</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>nacos_client2</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <java.version>1.8</java.version>
        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
        <alibaba.version>0.9.0.RELEASE</alibaba.version>
    </properties>
    <dependencies>
        <!--nacos discovery依赖-->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
            <version>${alibaba.version}</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba.csp</groupId>
            <artifactId>sentinel-datasource-nacos</artifactId>
            <version>1.6.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <!-- local -->
        <profile>
            <id>test</id>
            <activation>
                <property>
                    <name>test</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
                <extraJvmArguments>
                    -Xmx1024M
                    -Xms1024M
                    -Xmn256M
                    -XX:PermSize=128m
                    -XX:MaxPermSize=512m
                </extraJvmArguments>
                <spring.profile>test</spring.profile>
            </properties>
        </profile>

        <!-- staging -->
        <profile>
            <id>staging</id>
            <activation>
                <property>
                    <name>staging</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
                <extraJvmArguments>
                    -Xmx2096M
                    -Xms2096M
                    -Xmn512M
                    -XX:PermSize=128m
                    -XX:MaxPermSize=512m
                </extraJvmArguments>
                <spring.profile>staging</spring.profile>
            </properties>
        </profile>
    </profiles>
</project>